<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessLeaf" />

    <com.riteshakya.ui.components.TextInput
        android:id="@+id/nameOfAuthorityTxt"
        style="@style/Widget.Form.Input"
        android:hint="@string/txt_name_of_authority"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.riteshakya.ui.components.TextInput
        android:id="@+id/schoolNameTxt"
        style="@style/Widget.Form.Input"
        android:hint="@string/txt_school_name"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameOfAuthorityTxt" />

    <com.riteshakya.ui.components.TextInput
        android:id="@+id/schoolEmailTxt"
        style="@style/Widget.Form.Input"
        android:hint="@string/txt_school_e_mail"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/schoolNameTxt" />

    <com.riteshakya.ui.components.TextInput
        android:id="@+id/schoolAreaPinTxt"
        style="@style/Widget.Form.Input"
        android:hint="@string/txt_school_area_pincode"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/schoolEmailTxt" />

    <com.riteshakya.ui.components.TextInput
        android:id="@+id/cityNameTxt"
        style="@style/Widget.Form.Input"
        android:hint="@string/txt_city_name"
        android:imeOptions="actionDone"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/schoolAreaPinTxt" />


</androidx.constraintlayout.widget.ConstraintLayout>