<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
            android:id="@+id/titleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_padding"
            android:text="@string/txt_on_boarding_title"
            android:textAppearance="@style/TextAppearance.Title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/subtitleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_padding"
            android:text="@string/txt_on_boarding_subtitle"
            android:textAppearance="@style/TextAppearance.SubTitle"
            app:layout_constraintBottom_toTopOf="@id/signUpBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTxt"
            app:layout_constraintVertical_bias="0"/>

    <Button
            android:id="@+id/loginBtn"
            android:text="@string/txt_on_boarding_login"
            style="@style/Widget.Button.OutlinedButton"
            app:layout_constraintBottom_toTopOf="@id/signUpBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <Button
            android:id="@+id/signUpBtn"
            android:text="@string/txt_on_boarding_signup"
            style="@style/Widget.Button.OutlinedButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>